--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>887</width>
-    <height>636</height>
+    <width>970</width>
+    <height>731</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,8 +18,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
-      <width>871</width>
+      <y>0</y>
+      <width>941</width>
       <height>111</height>
      </rect>
     </property>
@@ -29,7 +29,7 @@
     <widget class="QToolButton" name="btnOperationMode">
      <property name="geometry">
       <rect>
-       <x>630</x>
+       <x>660</x>
        <y>70</y>
        <width>111</width>
        <height>31</height>
@@ -47,7 +47,7 @@
       <rect>
        <x>10</x>
        <y>30</y>
-       <width>731</width>
+       <width>761</width>
        <height>31</height>
       </rect>
      </property>
@@ -64,9 +64,9 @@
     <widget class="QPushButton" name="btnSelectFolder">
      <property name="geometry">
       <rect>
-       <x>770</x>
+       <x>820</x>
        <y>30</y>
-       <width>91</width>
+       <width>111</width>
        <height>31</height>
       </rect>
      </property>
@@ -86,9 +86,9 @@ border-color: rgb(0, 0, 0);</string>
     <widget class="QPushButton" name="btnApply">
      <property name="geometry">
       <rect>
-       <x>770</x>
+       <x>820</x>
        <y>70</y>
-       <width>91</width>
+       <width>111</width>
        <height>31</height>
       </rect>
      </property>
@@ -110,7 +110,7 @@ selection-color: rgb(143, 240, 164);</string>
       <rect>
        <x>10</x>
        <y>70</y>
-       <width>291</width>
+       <width>311</width>
        <height>31</height>
       </rect>
      </property>
@@ -130,9 +130,9 @@ selection-color: rgb(143, 240, 164);</string>
      </property>
      <property name="geometry">
       <rect>
-       <x>310</x>
+       <x>330</x>
        <y>70</y>
-       <width>311</width>
+       <width>321</width>
        <height>31</height>
       </rect>
      </property>
@@ -149,14 +149,78 @@ selection-color: rgb(143, 240, 164);</string>
     <widget class="Line" name="line">
      <property name="geometry">
       <rect>
-       <x>750</x>
-       <y>20</y>
+       <x>780</x>
+       <y>30</y>
        <width>21</width>
-       <height>91</height>
+       <height>71</height>
       </rect>
      </property>
      <property name="orientation">
       <enum>Qt::Vertical</enum>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="stateBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>120</y>
+      <width>941</width>
+      <height>561</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>State</string>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+    <widget class="QListWidget" name="currentPathContentList">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>371</width>
+       <height>521</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="viewMode">
+      <enum>QListView::ListMode</enum>
+     </property>
+    </widget>
+    <widget class="Line" name="line_2">
+     <property name="geometry">
+      <rect>
+       <x>380</x>
+       <y>30</y>
+       <width>21</width>
+       <height>521</height>
+      </rect>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="txtChangesLog">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>400</x>
+       <y>30</y>
+       <width>531</width>
+       <height>521</height>
+      </rect>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
@@ -166,7 +230,7 @@ selection-color: rgb(143, 240, 164);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>887</width>
+     <width>970</width>
      <height>22</height>
     </rect>
    </property>
